--- a/website/src/app.html
+++ b/website/src/app.html
@@ -2,7 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%sveltekit.assets%/logo.svg" />
+
+    <!-- IE 10+ "Metro" Tiles -->
+    <meta name="msapplication-TileColor" content="#0E0F29">
+    <meta name="msapplication-TileImage" content="%sveltekit.assets%/favicon-metro.png">
+    <!-- Touch Icons - iOS and Android 2.1+ -->
+    <link rel="apple-touch-icon-precomposed" href="%sveltekit.assets%/favicon-apple.png">
+    <link rel="icon" href="%sveltekit.assets%/favicon.png">
+<!--    <link rel="icon" href="%sveltekit.assets%/favicon.ico">-->
+<!--    <link rel="icon" href="%sveltekit.assets%/favicon-128.png">-->
+
+    <link rel="icon" href="" />
     <meta name="viewport" content="width=device-width" />
 
     %sveltekit.head%
