add more header images

--- a/website/src/app.html
+++ b/website/src/app.html
@@ -5,12 +5,21 @@
 
     <!-- IE 10+ "Metro" Tiles -->
     <meta name="msapplication-TileColor" content="#0E0F29" />
-    <meta name="msapplication-TileImage" content="%sveltekit.assets%/favicon-metro.png" />
+    <meta
+      name="msapplication-TileImage"
+      content="%sveltekit.assets%/favicon-metro.png"
+      type="image/png"
+    />
     <!-- Touch Icons - iOS and Android 2.1+ -->
-    <link rel="apple-touch-icon-precomposed" href="%sveltekit.assets%/favicon-apple.png" />
-    <link rel="icon" href="%sveltekit.assets%/favicon.png" />
-    <!--    <link rel="icon" href="%sveltekit.assets%/favicon.ico">-->
-    <!--    <link rel="icon" href="%sveltekit.assets%/favicon-128.png">-->
+    <link
+      rel="apple-touch-icon-precomposed"
+      sizes="152x152"
+      href="%sveltekit.assets%/favicon-apple.png"
+      type="image/png"
+    />
+    <link rel="icon" href="%sveltekit.assets%/favicon.png" type="image/png" />
+    <link rel="icon" href="%sveltekit.assets%/favicon.ico" type="image/x-icon" />
+    <link rel="icon" sizes="128x128" href="%sveltekit.assets%/favicon-128.png" type="image/png" />
 
     <meta name="viewport" content="width=device-width" />
 
